[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
console_error_panic_hook = { version = "0.1.6" }
deno_task_shell = { git = "https://github.com/dsherret/deno_task_shell", rev = "21ed031", default-features = false, features = ["serialization"] }
wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"] }
