[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_static_text = "0.8.2"
deno_task_shell = { version = "0.14.4", default-features = false, features = ["serialization"] }
once_cell = "1.16.0"
serde = "1"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "=0.2.90"
